Updates SDK and NuGet package configuration
Updates .NET SDK version to 9.0.305; adds README.md to NuGet package and suppresses warning NU5128.

--- a/Templates.csproj
+++ b/Templates.csproj
@@ -12,6 +12,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Keboo/DotnetTemplates</RepositoryUrl>
     <PackageIcon>NuGetIcon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+
+    <NoWarn>$(NoWarn);NU5128</NoWarn>
 
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
@@ -24,6 +27,7 @@
     <Compile Remove="**\*" />
 
     <None Include="NuGetIcon.png" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
