--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     strategy:
-      # fail-fast: true
+      fail-fast: true
       matrix:
         include:
           - name: "Default (slnx with tests)"
@@ -164,7 +164,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     strategy:
-      # fail-fast: true
+      fail-fast: true
       matrix:
         include:
           - name: "Default (slnx with tests)"
@@ -285,7 +285,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     strategy:
-      # fail-fast: true
+      fail-fast: true
       matrix:
         include:
           - name: "Default (slnx with tests)"
@@ -410,7 +410,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     strategy:
-      # fail-fast: true
+      fail-fast: true
       matrix:
         include:
           - name: "Default (slnx)"
