--- a/templates/Console/ConsoleApp/Directory.Packages.props
+++ b/templates/Console/ConsoleApp/Directory.Packages.props
@@ -30,7 +30,7 @@
     <PackageVersion Include="Moq.AutoMock" Version="3.5.0" />
     <PackageVersion Include="MSTest.TestAdapter" Version="3.7.0" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.7.0" />
-    <PackageVersion Include="System.CommandLine" Version="2.0.0-rc.1.25451.107" />
+    <PackageVersion Include="System.CommandLine" Version="2.0.0" />
     <PackageVersion Include="TUnit" Version="0.6.0" />
     <PackageVersion Include="TUnit.Assertions" Version="0.6.0" />
     <PackageVersion Include="TUnit.Engine" Version="0.6.0" />
