--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
   </ItemGroup>
 
 </Project>
