WIP Getting data project working
More work on getting data project working properly

Getting the migrations running with identity

Automates EF Core database migrations

Configures the AppHost to automatically apply pending Entity Framework Core migrations when the database resource is ready.

Refactors process execution helpers for improved reusability and robustness, allowing commands like `dotnet ef database update` to be invoked more reliably within Aspire lifecycle hooks. Ensures the `DesignTimeAppDbContextFactory` is always available and adds the necessary `Microsoft.EntityFrameworkCore.Design` package.

--- a/templates/Blazor/BlazorApp/BlazorApp.ServiceDefaults/BlazorApp.ServiceDefaults.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.ServiceDefaults/BlazorApp.ServiceDefaults.csproj
@@ -1,14 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <IsAspireSharedProject>true</IsAspireSharedProject>
   </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" />
 
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" />
