--- a/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
@@ -1,20 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.0" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <UserSecretsId>6027b674-f555-4289-8093-8c700da09eda</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" />
+    <PackageReference Include="Aspire.Hosting.SqlServer" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorApp.Core\BlazorApp.Core.csproj" IsAspireProjectResource="false" />
+    <ProjectReference Include="..\BlazorApp.Data\BlazorApp.Data.csproj" IsAspireProjectResource="false" />
     <ProjectReference Include="..\BlazorApp\BlazorApp\BlazorApp.csproj" />
   </ItemGroup>
 
