--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Properties/launchSettings.json
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": true,
+        "launchBrowser": false,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "http://blazorapp.dev.localhost:5285",
         "environmentVariables": {
@@ -14,7 +14,7 @@
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": true,
+        "launchBrowser": false,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "https://blazorapp.dev.localhost:7147;http://blazorapp.dev.localhost:5285",
         "environmentVariables": {
