--- a/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
@@ -10,7 +10,10 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.SqlServer" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
 
   </ItemGroup>
 
