Adds ticket queue management feature
Adds TicketQueue entity, database migration, and service for queue operations. Implements Aspire commands for dotnet tool restore and database migrations. Introduces Blazor UI for creating, managing, and interacting with ticket queues. Updates dotnet-ef tool version.

--- a/templates/Blazor/BlazorApp/BlazorApp.AppHost/appsettings.Development.json
+++ b/templates/Blazor/BlazorApp/BlazorApp.AppHost/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=(localdb)\\mssqllocaldb;Database=BlazorApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
