--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/BlazorApp.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/BlazorApp.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\..\BlazorApp.ServiceDefaults\BlazorApp.ServiceDefaults.csproj" />
     <ProjectReference Include="..\BlazorApp.Client\BlazorApp.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" />
 
   </ItemGroup>
 
