--- a/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+    <PackageReference Include="Polly.Core" />
   </ItemGroup>
 
   <ItemGroup>
