--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/BlazorApp.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/BlazorApp.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\BlazorApp.Client\BlazorApp.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" />
+    <PackageReference Include="Radzen.Blazor" />
 
   </ItemGroup>
 
