Refactor Aspire helpers using C# 14 extensions
Adopts C# 14 `extension` types for better organization and readability of Aspire resource helper methods.
Introduces `LogicalGroupResource` to group related resources, aggregating their state and endpoints in the dashboard.
Adds support for `WithReplicas` on projects and `WithParentRelationship` to link child resources to logical groups.
Enhances process execution logging to display the full command string for improved traceability.
Updates Aspire.Hosting packages to version 13.1.0.
Adds commands to check for and install the Aspire CLI.

--- a/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\BlazorApp.Data\BlazorApp.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
