--- a/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="Polly.Core" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
 
   <ItemGroup>
