--- a/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.Core/BlazorApp.Core.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="Polly.Core" />
@@ -13,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorApp.Data\BlazorApp.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
