--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
-    <PackageReference Include="Radzen.Blazor" />
+    <PackageReference Include="MudBlazor" />
   </ItemGroup>
 
 </Project>
