Adds conditional Azure SQL deployment and resource exclusion
Configures the Aspire application host to provision Azure SQL Server when publishing and a local SQL Server container for development.

Excludes development-only resources such as the DBGate viewer, external documentation links, and logical groups from the deployment manifest.

Updates project references to include Aspire Azure hosting packages and the latest Aspire SDK.

Adds `.azure` to `.gitignore` and provides comprehensive deployment instructions using `azd` in the README.

--- a/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
@@ -1,6 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.5.0" />
+<Project Sdk="Aspire.AppHost.Sdk/13.1.0">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" />
+    <PackageReference Include="Aspire.Hosting.Azure" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" />
     <PackageReference Include="Aspire.Hosting.SqlServer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <PrivateAssets>all</PrivateAssets>
