Adds comprehensive Playwright UI tests for BlazorApp
Introduces an end-to-end UI test suite using Playwright and TUnit.

This suite includes:
- A dedicated `BlazorApp.UITests` project with Page Object Models for various application pages.
- A comprehensive workflow test covering user registration, login, room creation, question management (submission, approval, rejection, setting current, answering, deleting), and account deletion.
- Validation of real-time SignalR features through simulated multi-user interactions using separate browser contexts.
- An Aspire AppHost command (`.WithUITests()`) that allows running the UI tests directly from the dashboard, automatically configuring the application's base URL.
- Detailed documentation for test setup, execution, debugging, and CI/CD integration, including environment variable options for headless/headed mode, slow motion, and target URLs.

These tests significantly enhance application reliability by validating key user flows and UI interactions across the BlazorApp.

--- a/templates/Blazor/BlazorApp/Directory.Build.props
+++ b/templates/Blazor/BlazorApp/Directory.Build.props
@@ -23,11 +23,11 @@ See: https://learn.microsoft.com/visualstudio/msbuild/customize-your-build
 
   <!--
   This allows all projects to share the same user secrets file. 
-  If you want project to have their own, set it to a different GUID on each project.
+  If you want project to have their own, set it to a different value on each project.
   See: https://learn.microsoft.com/dotnet/architecture/microservices/secure-net-microservices-web-applications/developer-app-secrets-storage
   -->
   <PropertyGroup Label="User Secrets">
-    <UserSecretsId>12345678-9abc-0123-4567-890abcdef123</UserSecretsId>
+    <UserSecretsId>BlazorApp-secrets</UserSecretsId>
   </PropertyGroup>
 
 </Project>
