--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Client/BlazorApp.Client.csproj
@@ -5,6 +5,7 @@
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
+    <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
   <ItemGroup>
