--- a/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.Azure" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppContainers" />
     <PackageReference Include="Aspire.Hosting.Azure.Sql" />
     <PackageReference Include="Aspire.Hosting.SqlServer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-
   </ItemGroup>
 
   <ItemGroup>
