--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/appsettings.json
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/appsettings.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "IncludeScopes": true,
+        "TimestampFormat": "HH:mm:ss "
+      }
     }
   },
   "AllowedHosts": "*"
