--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Web/tsconfig.node.json
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Web/tsconfig.node.json
@@ -7,7 +7,8 @@
     "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "types": ["node"]
   },
   "include": ["vite.config.ts"]
 }
