Adding PWA support

--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Web/BlazorApp.Web.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp.Web/BlazorApp.Web.csproj
@@ -9,7 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
