--- a/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
+++ b/templates/Blazor/BlazorApp/BlazorApp.AppHost/BlazorApp.AppHost.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Aspire.Hosting.Azure" />
     <PackageReference Include="Aspire.Hosting.Azure.AppContainers" />
     <PackageReference Include="Aspire.Hosting.Azure.Sql" />
-    <PackageReference Include="Aspire.Hosting.NodeJs" />
+    <PackageReference Include="Aspire.Hosting.JavaScript" />
     <PackageReference Include="Aspire.Hosting.SqlServer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <PrivateAssets>all</PrivateAssets>
