--- a/templates/Aspire/ReactApp/ReactApp.AppHost/Properties/launchSettings.json
+++ b/templates/Aspire/ReactApp/ReactApp.AppHost/Properties/launchSettings.json
@@ -10,7 +10,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21198",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22257"
+        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22257",
+        "REACTAPP_TEST_FRONTEND_URL": "http://localhost:44444"
       }
     },
     "http": {
@@ -22,7 +23,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19175",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20102"
+        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20102",
+        "REACTAPP_TEST_FRONTEND_URL": "http://localhost:44444"
       }
     }
   }
