--- a/templates/Aspire/ReactApp/ReactApp.AppHost/appsettings.json
+++ b/templates/Aspire/ReactApp/ReactApp.AppHost/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "ReactApp": {
+    "DatabaseServerContainerName": "ReactApp-sql",
+    "DatabaseVolumentName": ""
   }
 }
