--- a/templates/Aspire/ReactApp/ReactApp.UITests/ReactApp.UITests.csproj
+++ b/templates/Aspire/ReactApp/ReactApp.UITests/ReactApp.UITests.csproj
@@ -5,12 +5,16 @@
     <OutputType>Exe</OutputType>
     <IsTestProject>true</IsTestProject>
     <IsPackable>false</IsPackable>
-
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.Testing" />
     <PackageReference Include="Microsoft.Playwright" />
     <PackageReference Include="TUnit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ReactApp.AppHost\ReactApp.AppHost.csproj" />
   </ItemGroup>
 
   <ItemGroup>
