Adds accessibility testing and refactors UI Page Objects
Integrates `Deque.AxeCore.Playwright` to enable automated accessibility testing across the application's UI. Introduces a `TestPageBase` to centralize common Page Object logic, improving reusability and maintainability.

- Refactors existing Page Objects to inherit from `TestPageBase`.
- Adds accessibility tests for Login, Register, Home, My Rooms, Room View, and Room Management pages.
- Improves semantic HTML structure in the React application by adjusting heading levels (`h1`, `h2`) and adds ARIA labels to interactive elements for better screen reader compatibility.
- Updates the `TUnit` package to the latest version.

--- a/templates/Aspire/ReactApp/Directory.Packages.props
+++ b/templates/Aspire/ReactApp/Directory.Packages.props
@@ -12,6 +12,7 @@
     <PackageVersion Include="Aspire.Hosting.SqlServer" Version="13.1.0" />
     <PackageVersion Include="Aspire.Hosting.Testing" Version="13.1.0" />
     <PackageVersion Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.4.0" />
+    <PackageVersion Include="Deque.AxeCore.Playwright" Version="4.11.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
     <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="10.0.2" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.2" />
@@ -31,7 +32,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="Moq.AutoMock" Version="3.6.1" />
-    <PackageVersion Include="TUnit" Version="1.12.93" />
+    <PackageVersion Include="TUnit" Version="1.12.102" />
     <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.15.0" />
     <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.15.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.15.0" />
