--- a/templates/Aspire/ReactApp/ReactApp.UITests/ReactApp.UITests.csproj
+++ b/templates/Aspire/ReactApp/ReactApp.UITests/ReactApp.UITests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.Testing" />
+    <PackageReference Include="Deque.AxeCore.Playwright" />
     <PackageReference Include="Microsoft.Playwright" />
     <PackageReference Include="TUnit" />
   </ItemGroup>
