Refactors Aspire React template architecture
Removes the `ReactApp.Client` Blazor WebAssembly project, streamlining the frontend implementation to exclusively use React.

Flattens the solution's project directory structure by moving `ReactApp` and `ReactApp.Web` projects up one level.

Simplifies the AppHost configuration by removing conditional logic for the JavaScript frontend and eliminating the `REACTAPP_TEST_FRONTEND_URL` environment variable. Updates internal resource names and project references to reflect these structural changes.

--- a/templates/Aspire/ReactApp/ReactApp.AppHost/Properties/launchSettings.json
+++ b/templates/Aspire/ReactApp/ReactApp.AppHost/Properties/launchSettings.json
@@ -10,8 +10,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21198",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22257",
-        "REACTAPP_TEST_FRONTEND_URL": "http://localhost:44444"
+        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22257"
       }
     },
     "http": {
@@ -23,8 +22,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19175",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20102",
-        "REACTAPP_TEST_FRONTEND_URL": "http://localhost:44444"
+        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20102"
       }
     }
   }
