Adds Static Web App and refines infrastructure setup
Introduces a new module for deploying Azure Static Web Apps to host the frontend application.

Enhances the backend container app configuration to utilize secret environment variables for database connection strings and enables EF Core migrations on startup.

Refactors the SQL module to dynamically add a firewall rule for the current public IP, improves admin group integration, and adjusts the default SKU to 'Basic'.

Improves environment isolation by incorporating a unique identifier for shared resources and passing environment context to modules. Updates Terraform backend storage account name and relevant gitignore rules.

--- a/templates/Aspire/ReactApp/Infra/.gitignore
+++ b/templates/Aspire/ReactApp/Infra/.gitignore
@@ -43,5 +43,5 @@ terraform.rc
 # Uncomment the line below if you want to ignore planout files.
 # planout
 
-# Ignore local variable definitions
-local.auto.tfvars
+
+.terraform.lock.hcl
