Updates Aspire React template with CI/CD and infra
Adds GitHub Actions workflows for build, deploy, and infrastructure, configures Azure AD OIDC, updates .NET and Aspire tooling, refines Terraform modules, enhances UI tests, and adjusts frontend/backend app configuration.

--- a/Templates.csproj
+++ b/Templates.csproj
@@ -14,7 +14,7 @@
     <PackageIcon>NuGetIcon.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
-    <NoWarn>$(NoWarn);NU5128</NoWarn>
+    <NoWarn>$(NoWarn);NU5128;NU5110;NU5111</NoWarn>
 
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
