--- a/templates/Aspire/ReactApp/ReactApp.UITests/ReactApp.UITests.csproj
+++ b/templates/Aspire/ReactApp/ReactApp.UITests/ReactApp.UITests.csproj
@@ -5,6 +5,8 @@
     <OutputType>Exe</OutputType>
     <IsTestProject>true</IsTestProject>
     <IsPackable>false</IsPackable>
+    <IsPublishable>false</IsPublishable>
+    <EnableMSTestRunner>true</EnableMSTestRunner>
   </PropertyGroup>
 
   <ItemGroup>
