--- a/templates/Aspire/ReactApp/.github/workflows/build-and-deploy.yml
+++ b/templates/Aspire/ReactApp/.github/workflows/build-and-deploy.yml
@@ -16,16 +16,19 @@ permissions:
   id-token: write
   contents: read
 
+defaults:
+  run:
+    shell: pwsh
+
 env:
   DOTNET_VERSION: '10.0.x'
   NODE_VERSION: '20.x'
-  BACKEND_PROJECT_PATH: 'ReactApp/ReactApp.csproj'
   FRONTEND_PROJECT_PATH: 'ReactApp.Web'
   TERRAFORM_VERSION: '1.9.0'
 
 jobs:
-  # Build and test the .NET backend
-  build-backend:
+  # Build and test backend and frontend
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -36,31 +39,6 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
           global-json-file: global.json
 
-      - name: Restore dependencies
-        run: dotnet restore ${{ env.BACKEND_PROJECT_PATH }}
-
-      - name: Build
-        run: dotnet build ${{ env.BACKEND_PROJECT_PATH }} --no-restore --configuration Release
-
-      - name: Test
-        run: dotnet test --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
-
-      - name: Publish backend
-        run: dotnet publish ${{ env.BACKEND_PROJECT_PATH }} --configuration Release --output ./publish/backend --no-build
-
-      - name: Upload backend artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend
-          path: ./publish/backend
-          retention-days: 1
-
-  # Build the React frontend
-  build-frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -68,17 +46,83 @@ jobs:
           cache: 'npm'
           cache-dependency-path: ${{ env.FRONTEND_PROJECT_PATH }}/package-lock.json
 
-      - name: Install dependencies
+      - name: Install frontend dependencies
         working-directory: ${{ env.FRONTEND_PROJECT_PATH }}
         run: npm ci
 
-      - name: Lint
+      - name: Lint frontend
         working-directory: ${{ env.FRONTEND_PROJECT_PATH }}
         run: npm run lint
 
-      - name: Build
+      - name: Build frontend
         working-directory: ${{ env.FRONTEND_PROJECT_PATH }}
         run: npm run build
+        env:
+          BACKEND_URL: ''
+
+      - name: Restore .NET dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build --no-restore --configuration Release
+
+      - name: Restore dotnet tool
+        run: dotnet tool restore
+
+      - name: Check for Pending Database Changes
+        run: |
+          dotnet ef migrations has-pending-model-changes `
+            --configuration Release `
+            --project ReactApp.Data/ReactApp.Data.csproj `
+           --startup-project ReactApp.AppHost/ReactApp.AppHost.csproj
+
+      - name: Install Playwright browsers
+        run: pwsh ReactApp.UITests/bin/Release/net10.0/playwright.ps1 install --with-deps
+
+      - name: Test
+        run: dotnet test --no-build --configuration Release --verbosity normal
+        env:
+          DOTNET_BUILD_CONFIGURATION: Release
+
+      - name: Upload test failure screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-failure-screenshots
+          path: '**/TestResults/screenshots/*.png'
+          if-no-files-found: ignore
+          retention-days: 7
+
+      - name: Upload test failure logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-failure-logs
+          path: '**/TestResults/logs/*.log'
+          if-no-files-found: ignore
+          retention-days: 7
+
+      - name: Publish
+        run: dotnet publish --configuration Release --no-build
+
+      - name: Build Database Bundle
+        if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
+        run: |
+          dotnet ef migrations bundle `
+            --self-contained `
+            --no-build `
+            --configuration Release `
+            --project ReactApp.Data/ReactApp.Data.csproj `
+            --startup-project .\ReactApp.AppHost\ReactApp.AppHost.csproj `
+            --output efbundle
+
+      - name: Upload DB Migration
+        if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: DatabaseMigration
+          path: 'efbundle'
+          retention-days: 1
 
       - name: Upload frontend artifact
         uses: actions/upload-artifact@v4
@@ -87,17 +131,31 @@ jobs:
           path: ${{ env.FRONTEND_PROJECT_PATH }}/dist
           retention-days: 1
 
+  automerge:
+    if: ${{ github.event_name == 'pull_request' }}
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+      contents: write
+
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v3.11.2
+
   # Get infrastructure outputs from Terraform state
   get-infrastructure-outputs:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
     environment: production
     outputs:
       acr_login_server: ${{ steps.terraform-outputs.outputs.acr_login_server }}
       backend_container_app_name: ${{ steps.terraform-outputs.outputs.backend_container_app_name }}
+      backend_url: ${{ steps.terraform-outputs.outputs.backend_url }}
       resource_group_name: ${{ steps.terraform-outputs.outputs.resource_group_name }}
       static_web_app_name: ${{ steps.terraform-outputs.outputs.static_web_app_name }}
       static_web_app_api_key: ${{ steps.terraform-outputs.outputs.static_web_app_api_key }}
+      database_connection_string: ${{ steps.terraform-outputs.outputs.database_connection_string }}
     steps:
       - uses: actions/checkout@v4
 
@@ -126,27 +184,56 @@ jobs:
       - name: Get Terraform Outputs
         id: terraform-outputs
         working-directory: Infra
+        shell: bash
         run: |
           echo "acr_login_server=$(terraform output -raw acr_login_server)" >> $GITHUB_OUTPUT
           echo "backend_container_app_name=$(terraform output -raw backend_container_app_name)" >> $GITHUB_OUTPUT
           echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
           echo "static_web_app_name=$(terraform output -raw static_web_app_name)" >> $GITHUB_OUTPUT
           echo "static_web_app_api_key=$(terraform output -raw static_web_app_api_key)" >> $GITHUB_OUTPUT
+          echo "backend_url=$(terraform output -raw backend_url)" >> $GITHUB_OUTPUT
+          echo "database_connection_string=$(terraform output -raw database_connection_string)" >> $GITHUB_OUTPUT
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_USE_OIDC: true
+
+  deploy-database:
+    runs-on: ubuntu-latest
+    needs: [build, get-infrastructure-outputs]
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
+    environment: production
+
+    steps:
+      - name: Download DB Migration Bundle
+        uses: actions/download-artifact@v4
+        with:
+          name: DatabaseMigration
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
+      - name: Apply Migration
+        run: |
+          chmod +x efbundle
+          $env:ConnectionStrings__Database = '${{ needs.get-infrastructure-outputs.outputs.database_connection_string }}'
+          ./efbundle
+          rm efbundle
+
 
   # Build and push Docker image for backend
   deploy-backend:
     runs-on: ubuntu-latest
-    needs: [build-backend, get-infrastructure-outputs]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [build, get-infrastructure-outputs]
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
     environment: production
     steps:
       - uses: actions/checkout@v4
-
-      - name: Download backend artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: backend
-          path: ./publish/backend
 
       - name: Azure Login
         uses: azure/login@v2
@@ -159,33 +246,41 @@ jobs:
         run: |
           az acr login --name ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}/reactapp-backend:${{ github.sha }} -t ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}/reactapp-backend:latest -f ReactApp/Dockerfile .
-          docker push ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}/reactapp-backend:${{ github.sha }}
-          docker push ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}/reactapp-backend:latest
+      - name: dotnet publish
+        run: dotnet publish -r linux-x64 --self-contained -t:PublishContainer -p:ContainerRegistry=${{ needs.get-infrastructure-outputs.outputs.acr_login_server }} -p:ContainerImageTags="${{ github.sha }}"
 
       - name: Update Container App
         run: |
-          az containerapp update \
-            --name ${{ needs.get-infrastructure-outputs.outputs.backend_container_app_name }} \
-            --resource-group ${{ needs.get-infrastructure-outputs.outputs.resource_group_name }} \
-            --image ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}/reactapp-backend:${{ github.sha }}
+          az containerapp update `
+            --name ${{ needs.get-infrastructure-outputs.outputs.backend_container_app_name }} `
+            --resource-group ${{ needs.get-infrastructure-outputs.outputs.resource_group_name }} `
+            --image ${{ needs.get-infrastructure-outputs.outputs.acr_login_server }}/reactapp:${{ github.sha }}
 
   # Deploy frontend to Azure Static Web Apps
   deploy-frontend:
     runs-on: ubuntu-latest
-    needs: [build-frontend, get-infrastructure-outputs]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [build, get-infrastructure-outputs]
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
     environment: production
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download frontend artifact
-        uses: actions/download-artifact@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          name: frontend
-          path: ./dist
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: ${{ env.FRONTEND_PROJECT_PATH }}/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: ${{ env.FRONTEND_PROJECT_PATH }}
+        run: npm ci
+
+      - name: Build frontend for production
+        working-directory: ${{ env.FRONTEND_PROJECT_PATH }}
+        run: npm run build
+        env:
+          BACKEND_URL: ${{ needs.get-infrastructure-outputs.outputs.backend_url }}
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
@@ -193,6 +288,6 @@ jobs:
           azure_static_web_apps_api_token: ${{ needs.get-infrastructure-outputs.outputs.static_web_app_api_key }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
-          app_location: './dist'
+          app_location: '${{ env.FRONTEND_PROJECT_PATH }}/dist'
           skip_app_build: true
           skip_api_build: true
