--- a/templates/Aspire/ReactApp/.github/workflows/deploy-infrastructure.yml
+++ b/templates/Aspire/ReactApp/.github/workflows/deploy-infrastructure.yml
@@ -25,9 +25,57 @@ env:
   AZURE_LOCATION: 'westus2'
 
 jobs:
-  deploy-infrastructure:
+  plan:
     runs-on: ubuntu-latest
     environment: production
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
+          terraform_wrapper: false
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID_INFRA }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
+
+      - name: Terraform Init
+        working-directory: Infra
+        run: terraform init
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID_INFRA }}
+          ARM_USE_OIDC: true
+
+      - name: Terraform Plan
+        working-directory: Infra
+        run: terraform plan -out=tfplan
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID_INFRA }}
+          ARM_USE_OIDC: true
+          TF_VAR_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          TF_VAR_TENANT_ID: ${{ secrets.ARM_TENANT_ID_INFRA }}
+          TF_VAR_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
+
+      - name: Upload Terraform Plan
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfplan
+          path: Infra/tfplan
+          retention-days: 1
+
+  apply:
+    runs-on: ubuntu-latest
+    environment: production
+    needs: plan
     outputs:
       acr_login_server: ${{ steps.terraform-outputs.outputs.acr_login_server }}
       backend_container_app_name: ${{ steps.terraform-outputs.outputs.backend_container_app_name }}
@@ -46,49 +94,33 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.ARM_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID_INFRA }}
+          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
 
       - name: Terraform Init
         working-directory: Infra
         run: terraform init
         env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID_INFRA }}
           ARM_USE_OIDC: true
 
-      - name: Terraform Plan
-        working-directory: Infra
-        run: terraform plan -out=tfplan
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          ARM_USE_OIDC: true
-          TF_VAR_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          TF_VAR_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          TF_VAR_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v4
+        with:
+          name: tfplan
+          path: Infra
 
       - name: Terraform Apply
         working-directory: Infra
         run: terraform apply -auto-approve tfplan
         env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID_INFRA }}
           ARM_USE_OIDC: true
-          TF_VAR_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          TF_VAR_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          TF_VAR_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-
-      - name: Get Terraform Outputs
-        id: terraform-outputs
-        working-directory: Infra
-        run: |
-          echo "acr_login_server=$(terraform output -raw acr_login_server)" >> $GITHUB_OUTPUT
-          echo "backend_container_app_name=$(terraform output -raw backend_container_app_name)" >> $GITHUB_OUTPUT
-          echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
-          echo "static_web_app_name=$(terraform output -raw static_web_app_name)" >> $GITHUB_OUTPUT
-          echo "static_web_app_api_key=$(terraform output -raw static_web_app_api_key)" >> $GITHUB_OUTPUT
+          TF_VAR_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_INFRA }}
+          TF_VAR_TENANT_ID: ${{ secrets.ARM_TENANT_ID_INFRA }}
+          TF_VAR_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID_INFRA }}
