--- a/templates/Aspire/ReactApp/ReactApp.Core.Tests/ReactApp.Core.Tests.csproj
+++ b/templates/Aspire/ReactApp/ReactApp.Core.Tests/ReactApp.Core.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <IsPublishable>false</IsPublishable>
   </PropertyGroup>
 
   <ItemGroup>
