Configures Azure AD and GitHub Actions integration
Updates the setup script to use GitHubOwner instead of GitHubOrg for clarity.

Adds Azure AD service principals for both the main application and the infrastructure, improving security and access control.

Ensures the efbundle command exits with the correct code, preventing potential deployment issues.

--- a/templates/Aspire/ReactApp/.github/workflows/build-and-deploy.yml
+++ b/templates/Aspire/ReactApp/.github/workflows/build-and-deploy.yml
@@ -223,7 +223,9 @@ jobs:
           chmod +x efbundle
           $env:ConnectionStrings__Database = '${{ needs.get-infrastructure-outputs.outputs.database_connection_string }}'
           ./efbundle
+          $exitCode = $LASTEXITCODE
           rm efbundle
+          exit $exitCode
 
 
   # Build and push Docker image for backend
